--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,18 @@
   padding: 0;
   font-family: "Encode Sans Expanded", sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 12px;
+  cursor: pointer;
+}
+
+::-webkit-scrollbar-track {
+  background: #010606;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #01BF71;
+  border-radius: 20px;
+  transition: all .2s;
+}
